# src/routes/api.ts
@@ -13,5 +13,7 @@ router.post("/auth/login", authController.login);
 
 router.get("/auth/me", authMiddleware, authController.me);
 
+router.post("/auth/activation", authController.activation);
+
 
 export default router
